--- a/css/home.css
+++ b/css/home.css
@@ -2,6 +2,7 @@ body{
     height: 100vh;
     margin: 0;
     padding: 0;
+    background-color: #fff !important;
 }
 .fix{
     top: -10px;
@@ -10,113 +11,94 @@ body{
     background-color: #fff;
 }
 .navigation{
-    z-index: 20; 
-    width: 70%;
-    height: 60px;
-    position: right;
-    float: right;
-    display: flex;
-    margin-left: auto;
-    align-items:center;
-    background:url(../img/head-middle.png);
+   padding-top: 10px;
+    display: grid;
+    grid-template-columns: 400px 1050px 260px;
+    grid-auto-rows: 100px;
+    grid-auto-rows: minmax(50px, auto);
+    grid-column-gap: 40px;
+    margin-bottom: -35px;
+    position: relative;
+    
+    justify-content: center;
 }
-.logo{
-    width: 15%;
-    display: flex;
-    align-items: center;
+.nav1{
+  
 }
-.logotype{
-    width:100px;
-    margin-left: 20%;
-    margin-top: 10px;
+.img1{
+    margin-top: -95px;
+    justify-content: center;
+    margin-left: 50px;
+    
+}
+.img2{
+    margin-top: 5px;
+    width:75%;
+    height: 100%;
+        justify-content: center;
+   
    
 }
-.name{
-    margin-top: -30px;
-    font-size: 20px;
-    width: 50px;
-    margin-left: 40px;
-    font-family: 'Roboto', sans-serif;
-}
-.logo_on{
-   margin-left: -20px;
-    margin-top: 50px;
-}
-.nav-menu{
-width: 20%;
-
-
-}
-.menu{
-    display: flex;
-    justify-content: right;
-    align-items: center;
-    list-style: none;
-    width: 50%;
-    margin-left: 90px;
-    
-}
-.nav-item{
-padding:0 10px;
-text-align: center;
-
-}
-.nav-link{
-    text-decoration: none;
-    color: #fff;
-    font-size:14px;
-    border-bottom: 2px solid transparent;
-    transition: .3s;
-    font-weight: bold;
-    display: flex;
-    font-family: 'Roboto', sans-serif;
-    
-}
-.navigation_bot{
-
-    width: 40%;
-    float: right;
-    display: inline-block;
-    align-items:center;
-    
-}
-
-.nav-menu_bot{
-width: 20%;
-
-}
-.menu_bot{
-    display: flex;
+.text_p{
+    margin-top: 20px;
+    margin-left: 150px;
     justify-content: center;
-    align-items: center;
-    list-style: none;
-    width: 100%;
-    float: right;
+    font-size: 20px;
+    text-align: center;
 }
-.nav-item_bot{
-padding: 20px;
+.nav2{
+    display: grid;
+    grid-column-start: 2; 
+    grid-column-end: 3; 
+    grid-row-start: 2; 
+    grid-row-end: 3;
+    margin-top: -30px;
+    position: relative;
+    font-size: 19.6px;
+    
 }
-.nav-link_bot{
+.nav2 a{
     text-decoration: none;
-    color: black;
-    font-size:20px;
-    font-weight: bold;
-    font-family: 'Roboto', sans-serif;
-    margin: 20px;
-    background-image: linear-gradient(#e01533, #e01533);
-    background-position: 0% 100%;
-    background-repeat: no-repeat;
-    background-size: 0% 3px;
-    transition: .5s;
+    color: #000;
+   margin-left: 80px;
+ margin-top: -10px;
+   font-weight: bold;
+   background-image: linear-gradient(#F60018, #F60018);
+   background-position: 0% 100%;
+   background-repeat: no-repeat;
+   background-size: 0% 2px;
+   transition: background-size .3s;
+}
+.nav2 a:hover{
+    
+    background-size: 100% 2px;
     
 }
-.nav-link_bot:hover{
+.nav3{
+
+    background: #F60018;
+    width: 100%;
+    text-align: center;
+    justify-content: center;
+    height: 60px;
     
-    background-size: 100% 3px;
 }
+.nav3 p{
+    margin-top: 20px;
+    margin-right:150px;
+    color: #fff;
     
+}
 .card{
-    display:  flex;
+    display:  grid;
+    grid-template-columns: 400px 400px 400px;
+    
+    grid-auto-rows: minmax(330px, auto);
+
+  
+    position: relative;
+    
+    justify-content: center;
     margin-top: -80px;
     
 }
@@ -125,11 +107,10 @@ padding: 20px;
    background-color: #F60018;
     justify-content: center;
     align-items: center;
-    width: 380px;
-    height: 350px;
+   
     position: relative;
     color: #fff;
-    left: 8%;
+   
     z-index: 5;
     visibility: visible;
   
@@ -161,11 +142,10 @@ font-size: 22px;
    background-color: #FF4040;
     justify-content: center;
     align-items: center;
-    width: 380px;
-    height: 350px;
+   
     position: relative;
     color: #fff;
-    left: 8%;
+    
     z-index: 5;
     visibility: visible;
 }
@@ -194,11 +174,11 @@ font-size: 22px;
    background-color: #f75867;
     justify-content: center;
     align-items: center;
-    width: 380px;
-    height: 350px;
+   
+ 
     position: relative;
     color: #fff;
-    left: 8%;
+   
     z-index: 5;
     visibility: visible;
 }
@@ -239,8 +219,8 @@ font-size: 22px;
 .fon a{
     text-decoration: none;
     padding: 0.8rem 1.5rem;
-    background-color: #F60018;
-    border: 2px solid#F60018;
+   
+    
     font-size: 20px;
     color: #fff;
     margin-left: 140px;
@@ -248,17 +228,27 @@ font-size: 22px;
     outline: none;
     cursor: pointer;
     transition: 0.8s;
-    
+    line-height: 45px;
+    background: #F60018;;
+border-radius: 6px;
+text-align: center;
+transition-property: background, border-radius;
+transition-duration: .2s, 1s;
+transition-timing-function: linear, ease-in;
+width: 95px;
   }
   
   .fon a:hover{
     background-color: transparent;
     background-color:#F60018;
+ 
+border-radius: 50%;
   }
+
 .services{
-    background-color: #f3eded;
+   
 height: auto;
-    padding-top: 200px;
+    padding-top: 130px;
     overflow: hidden;
     padding-bottom: 100px;
     text-align: center;
@@ -267,25 +257,56 @@ height: auto;
 }
 .services h5{
     margin-top: -130px;
-    
+    font-weight: bold;
     position: relative;
     text-align: center;
+    justify-content: center;
     
 }
 .services h1{
     position: relative;
      text-align: center;
-   margin-left: 300px;
+     padding-bottom: 30px;
+   
 
 }
 .services cite{
     color:#F60018;
+   
+    
+    background-image: linear-gradient(currentColor, currentColor);
+    background-position: 0% 100%;
+    background-repeat: no-repeat;
+    background-size: 0% 2px;
+    transition: background-size .3s;
+}
+.fon cite{
+    color:#F60018;
+   
+    
+    background-image: linear-gradient(currentColor, currentColor);
+    background-position: 0% 100%;
+    background-repeat: no-repeat;
+    background-size: 0% 2px;
+    transition: background-size .3s;
+}
+.fon cite:hover{
+    color: #F60018;
+background-size: 100% 2px;
+}
+
+.card a:hover{
+color: #FFB300;
+background-size: 100% 2px;
+}
+.services cite:hover{
+    color: #FFB300;
 }
 
    
         button {
         
-        left: 45%;
+        
           position: relative;
           display: inline-block;
           cursor: pointer;
@@ -299,7 +320,7 @@ height: auto;
           font-family: inherit;
         }
         button.learn-more {
-          width: 12rem;
+          width: 14rem;
           height: auto;
         }
         button.learn-more .circle {
@@ -343,16 +364,16 @@ height: auto;
           transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
           position: absolute;
           top: -5px;
-          left: 30;
+          left: 0;
           right: 0;
           bottom: 0;
           padding: 0.75rem 0;
           margin: 0 0 0 1.85rem;
-          color: #282936;
+          color: #000;
           font-weight: 600;
           line-height: 1.6;
           text-align: center;
-          text-transform: uppercase;
+          
           text-decoration: none;
         }
         button:hover .circle {
@@ -369,102 +390,13 @@ height: auto;
         }
         
        
-.about_us{
-    margin-top: 80px;
-    width: auto;
-    
-    position: relative;
-    
-}
-.ab p,h3,h1{
-    position: relative;
-    text-align: left;
-    width: 40%;
-    left: 8%;
-    margin-top: 10px;
-}
-.ab h1{
-    font-size: 40px;
-}
-.ab p{
-    font-size: 18px;
-    margin-bottom: 50px;
-}
-.ab cite{
-    color: #F60018;
-}
-.wrapper{
-    width:550px;
-    height: 350px;
-    display: flex;
-    position: relative;
-    float: right;
-    margin-top: -350px;
-    margin-right: 100px;
-    
-}
-.rounded-list li {
-    position: relative;
-    display: block;
-    padding: .4em .4em .4em 2em;
-    *padding: .4em;
-    margin: .5em 0;
-    background: #fff;
-    color: #444;
-    left: 9%;
-    text-decoration: none;
-    -moz-border-radius: .3em;
-    -webkit-border-radius: .3em;
-    border-radius: .3em;
-    -webkit-transition: all .3s ease-out;
-    -moz-transition: all .3s ease-out;
-    -ms-transition: all .3s ease-out;
-    -o-transition: all .3s ease-out;
-    transition: all .3s ease-out;	
-    width: 20%;
-}
- 
-.rounded-list li:hover {
-    background: #eee;
-}
- 
-.rounded-list li:hover:before {
-    -moz-transform: rotate(360deg);
-    -webkit-transform: rotate(360deg);
-    -moz-transform: rotate(360deg);
-    -ms-transform: rotate(360deg);
-    -o-transform: rotate(360deg);
-    transform: rotate(360deg);	
-}
- 
-.rounded-list li:before {
-    content: counter(li);
-    counter-increment: li;
-    position: absolute;	
-    left: -1.3em;
-    top: 50%;
-    margin-top: -1.3em;
-    background: #F60018;
-    height: 2em;
-    width: 2em;
-    line-height: 2em;
-    border: .3em solid #fff;
-    text-align: center;
-    font-weight: bold;
-    -moz-border-radius: 2em;
-    -webkit-border-radius: 2em;
-    border-radius: 2em;
-    -webkit-transition: all .3s ease-out;
-    -moz-transition: all .3s ease-out;
-    -ms-transition: all .3s ease-out;
-    -o-transition: all .3s ease-out;
-    transition: all .3s ease-out;
-}
+
+
 .call_us{
     position: relative;
     margin-left:105px;
     font-size: 18px;
-    font-family: 'Roboto', sans-serif;
+    
 }
 .call_us a{
     font-size: 25px;
@@ -502,13 +434,7 @@ font-family: 'Roboto', sans-serif;
     font-size: 22px;
     text-align: center;
 }
-.ab span{
-    position: relative;
-    color: #FFB300		;
-    left: 18%;
-    font-size: 30px;
-    margin-top: -40px;
-}
+
 .our2{
     top: -100px;
     position: relative;
@@ -535,12 +461,14 @@ font-family: 'Roboto', sans-serif;
 .programs{
     background: #fff;
     height: auto;
-    padding: 37px;
+    padding: 38px;
 }
 .top_footer{
     background: #000;
     height: auto;
     padding-bottom: 70px;
+    position: relative;
+    text-align: left;
 }
 .foot{
 margin-top: 70px; 
@@ -550,7 +478,7 @@ margin-top: 70px;
     color: #fff;
     font-size: 16px;
     width: 400px;
-    font-family: 'Roboto', sans-serif;
+    
     
 
 
@@ -575,6 +503,8 @@ margin-top: 70px;
     padding: 10px;
     background: #222121;
     color: #fff;
+    text-align: left;
+    margin-bottom: -100px;
     
 }
 .footer p{
@@ -608,10 +538,24 @@ margin-top: 70px;
     justify-content: center;
     padding-top: 50px;
     padding-bottom: 50px;
+    line-height: 30px;
+    
   
 }
+#service p{
+ color: #fff;
+    
+   
+}
+#service{
+    background: linear-gradient( rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7) ), url(../img/Bookkeeping.jpg);
+    -webkit-background-size: cover;
+  -moz-background-size:  cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
 .gr1{
-    border: 1px solid #F60018;
+    border: 3px solid #F60018;
     padding: 30px;
         background: #fff;
         border-radius: 45px 25px;
@@ -619,16 +563,17 @@ margin-top: 70px;
         -webkit-transition: all 1s;
         -o-transition: all 2s;
         
+        
 }
 .gr1 img{
-    color: #F60018;
-    background: #F60018;
+    color: #FFB300;
+    background: #FFB300;
     position: relative;
     display: flex;
-    margin-top: -60px;
+    margin-top: -75px;
     margin-left: 130px;
-    border: 10px solid #F60018;
-    border-radius: 35px 35px;
+    border: 10px solid #FFB300;
+    border-radius: 25px 15px;
     margin-bottom: 20px;
 }
 .gr1:before{
@@ -640,7 +585,7 @@ margin-top: 70px;
     transition: .7s ;
     }
 .gr2{
-    border: 1px solid #F60018;
+    border: 3px solid #F60018;
     padding: 30px;
         background: #fff;
         border-radius: 45px 25px;
@@ -650,14 +595,14 @@ margin-top: 70px;
         
 }
 .gr2 img{
-    color: #F60018;
-    background: #F60018;
+    color: #FFB300;
+    background: #FFB300;
     position: relative;
     display: flex;
-    margin-top: -60px;
+    margin-top: -75px;
     margin-left: 130px;
-    border: 10px solid #F60018;
-    border-radius: 25px 25px;
+    border: 10px solid #FFB300;
+    border-radius: 25px 15px;
     margin-bottom: 20px;
 }
 .gr2:before{
@@ -669,7 +614,7 @@ margin-top: 70px;
     transition: .7s ;
     }
 .gr3{
-    border: 1px solid #F60018;
+    border: 3px solid #F60018;
     padding: 30px;
         background: #fff;
         border-radius: 45px 25px;
@@ -679,14 +624,14 @@ margin-top: 70px;
         
 }
 .gr3 img{
-    color: #F60018;
-    background: #F60018;
+    color: #FFB300;
+    background: #FFB300;
     position: relative;
     display: flex;
-    margin-top: -60px;
+    margin-top: -75px;
     margin-left: 130px;
-    border: 10px solid #F60018;
-    border-radius: 35px 35px;
+    border: 10px solid #FFB300;
+    border-radius: 25px 15px;
     margin-bottom: 20px;
 }
 .gr3:before{
@@ -698,7 +643,7 @@ margin-top: 70px;
     transition: .7s ;
     }
 .gr4{
-    border: 1px solid #F60018;
+    border: 3px solid #F60018;
     padding: 30px;
         background: #fff;
         border-radius: 45px 25px;
@@ -708,14 +653,14 @@ margin-top: 70px;
         
 }
 .gr4 img{
-    color: #F60018;
-    background: #F60018;
+    color: #FFB300;
+    background: #FFB300;
     position: relative;
     display: flex;
-    margin-top: -60px;
+    margin-top: -75px;
     margin-left: 130px;
-    border: 10px solid #F60018;
-    border-radius: 25px 25px;
+    border: 10px solid #FFB300;
+    border-radius: 25px 15px;
     margin-bottom: 20px;
 }
 .gr4:before{
@@ -727,7 +672,7 @@ margin-top: 70px;
     transition: .7s ;
     }
 .gr5{
-    border: 1px solid #F60018;
+    border: 3px solid #F60018;
     padding: 30px;
         background: #fff;
         border-radius: 45px 25px;
@@ -737,14 +682,14 @@ margin-top: 70px;
         
 }
 .gr5 img{
-    color: #F60018;
-    background: #F60018;
+    color: #FFB300;
+    background: #FFB300;
     position: relative;
     display: flex;
-    margin-top: -60px;
+    margin-top: -75px;
     margin-left: 130px;
-    border: 10px solid #F60018;
-    border-radius: 15px 15px;
+    border: 12px solid #FFB300;
+    border-radius: 20px 15px;
     margin-bottom: 20px;
 }
 .gr5:before{
@@ -757,7 +702,7 @@ margin-top: 70px;
     }
 
 .gr6{
-    border: 1px solid #F60018;
+    border: 3px solid #F60018;
     padding: 30px;
         background: #fff;
         border-radius: 45px 25px;
@@ -767,14 +712,14 @@ margin-top: 70px;
         
 }
 .gr6 img{
-    color: #F60018;
-    background: #F60018;
+    color: #FFB300;
+    background: #FFB300;
     position: relative;
     display: flex;
-    margin-top: -60px;
+    margin-top: -75px;
     margin-left: 130px;
-    border: 10px solid #F60018;
-    border-radius: 15px 15px;
+    border: 10px solid #FFB300;
+    border-radius: 25px 15px;
     margin-bottom: 20px;
 }
 .gr6:before{
@@ -786,7 +731,7 @@ margin-top: 70px;
     transition: .7s ;
     }
 .gr7{
-    border: 1px solid #F60018;
+    border: 3px solid #F60018;
     padding: 30px;
         background: #fff;
         border-radius: 45px 25px;
@@ -796,14 +741,14 @@ margin-top: 70px;
         
 }
 .gr7 img{
-    color: #F60018;
-    background: #F60018;
+    color: #FFB300;
+    background: #FFB300;
     position: relative;
     display: flex;
-    margin-top: -60px;
+    margin-top: -75px;
     margin-left: 130px;
-    border: 10px solid #F60018;
-    border-radius: 15px 15px;
+    border: 10px solid #FFB300;
+    border-radius: 25px 15px;
     margin-bottom: 20px;
 }
 .gr7:before{
@@ -815,7 +760,7 @@ margin-top: 70px;
     transition: .7s ;
     }
 .gr8{
-    border: 1px solid #F60018;
+    border: 3px solid #F60018;
     padding: 30px;
         background: #fff;
         border-radius: 45px 25px;
@@ -825,14 +770,14 @@ margin-top: 70px;
         
 }
 .gr8 img{
-    color: #F60018;
-    background: #F60018;
+    color: #FFB300;
+    background: #FFB300;
     position: relative;
     display: flex;
-    margin-top: -60px;
+    margin-top: -75px;
     margin-left: 130px;
-    border: 10px solid #F60018;
-    border-radius: 15px 15px;
+    border: 10px solid #FFB300;
+    border-radius: 25px 15px;
     margin-bottom: 20px;
 }
 .gr8:before{
@@ -844,7 +789,7 @@ margin-top: 70px;
     transition: .7s ;
     }
 .gr9{
-    border: 1px solid #F60018;
+    border: 3px solid #F60018;
     padding: 30px;
         background: #fff;
         border-radius: 45px 25px;
@@ -854,14 +799,14 @@ margin-top: 70px;
         
 }
 .gr9 img{
-    color: #F60018;
-    background: #F60018;
+    color: #FFB300;
+    background: #FFB300;
     position: relative;
     display: flex;
-    margin-top: -60px;
+    margin-top: -75px;
     margin-left: 130px;
-    border: 10px solid #F60018;
-    border-radius: 15px 15px;
+    border: 10px solid #FFB300;
+    border-radius: 25px 15px;
     margin-bottom: 20px;
 }
 .gr9:before{
@@ -901,3 +846,117 @@ margin-top: 70px;
     .services cite{
         font-style: oblique;
     }
+    #gr4{
+        grid-column-start: 1;
+        grid-column-end: 1;
+        grid-row-start: 2;
+        grid-row-end: 3;
+        background: linear-gradient( rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7) ), url(../img/Bookkeeping.jpg);
+    -webkit-background-size: cover;
+  -moz-background-size:  cover;
+  -o-background-size: cover;
+  background-size: cover;
+  color: #fff;
+    }
+    #gr5{
+          grid-column-start: 3;
+   grid-column-end: 3;
+   grid-row-start: 2;
+   grid-row-end: 3;
+   background: linear-gradient( rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7) ), url(../img/Bookkeeping.jpg);
+   -webkit-background-size: cover;
+ -moz-background-size:  cover;
+ -o-background-size: cover;
+ background-size: cover;
+ color: #fff;
+    }
+    
+    .card a{
+        text-decoration: none;
+        color: #fff;
+        background-image: linear-gradient(currentColor, currentColor);
+        background-position: 0% 100%;
+        background-repeat: no-repeat;
+        background-size: 0% 2px;
+        transition: background-size .3s;
+        
+    }
+.card a:hover{
+    color: #FFB300;
+    background-size: 100% 2px;
+}
+.bottom_info{
+    display: grid;
+    grid-template-columns: 300px 300px 300px;
+    grid-auto-rows: 200px;
+      grid-column-gap: 100px;
+    grid-row-gap: 5em;
+    position: relative;
+    justify-content: center;
+    text-align: center;
+    padding-top: 50px;
+    
+}
+
+.bottom_info span{
+    color: #FFB300;
+    font-size: 32px;
+}
+.bottom_info p{
+    font-size: 22px;
+    font-weight: bold ;
+    white-space: pre-line;
+}
+.box{
+    
+   
+    margin-top: 80px;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    
+}
+
+
+.box a{
+    text-decoration: none;
+    padding: 0.8rem 1.5rem;
+    font-size: 20px;
+    color: #fff;
+
+    border-radius: 25px;
+    outline: none;
+    cursor: pointer;
+    transition: 0.8s;
+    line-height: 45px;
+    background: #F60018;;
+border-radius: 6px;
+text-align: center;
+transition-property: background, border-radius;
+transition-duration: .1s, 0.5s;
+transition-timing-function: linear, ease-in;
+width: 95px;
+  }
+  
+  .box a:hover{
+    background-color: transparent;
+    background-color:#F60018;
+ 
+border-radius: 50%;
+  }
+  
+#lc{
+    text-decoration: none;
+    color: #000;
+}
+#lc:hover{
+color: #FFB300;
+}
+.heading{
+    font-weight: bold;
+    padding: 15px 15px;
+}
+.heading:hover{
+    color:#FFB300;
+    transition: .4s;
+}
