--- a/css/home.css
+++ b/css/home.css
@@ -857,7 +857,9 @@ margin-top: 70px;
   -o-background-size: cover;
   background-size: cover;
   color: #fff;
+  line-height: 30px;
     }
+   
     #gr5{
           grid-column-start: 3;
    grid-column-end: 3;
@@ -869,6 +871,7 @@ margin-top: 70px;
  -o-background-size: cover;
  background-size: cover;
  color: #fff;
+ line-height: 30px;
     }
     
     .card a{
