--- a/css/Contact.css
+++ b/css/Contact.css
@@ -2,8 +2,10 @@ body{
     height: 100vh;
     margin: 0;
     padding: 0;
+ 
 }
 .fix{
+ 
     top: -10px;
     position: fixed;
     z-index: 1000;
@@ -12,7 +14,7 @@ body{
 .navigation{
   padding-top: 10px;
    display: grid;
-   grid-template-columns: 400px 1050px 260px;
+   grid-template-columns: 400px 1150px 260px;
    grid-auto-rows: 100px;
    grid-auto-rows: minmax(50px, auto);
    grid-column-gap: 40px;
@@ -21,22 +23,23 @@ body{
    
    justify-content: center;
 }
-.nav1{
- 
+.nav{
+  display: flex;
 }
 .img1{
-   margin-top: -95px;
-   justify-content: center;
-   margin-left: 50px;
-   
+  position: relative;
+  margin-top: -26px;
+  
+  margin-left: 35px;
+  
 }
 .img2{
-   margin-top: 5px;
-   width:75%;
-   height: 100%;
-       justify-content: center;
-  
-  
+
+
+      margin-left: 24px;
+      width: 17.9%;
+      height: 9%;
+  position: fixed;
 }
 .text_p{
    margin-top: 20px;
@@ -76,10 +79,11 @@ margin-top: -10px;
 .nav3{
 
    background: #F60018;
-   width: 100%;
+   
    text-align: center;
    justify-content: center;
    height: 60px;
+   
    
 }
 .nav3 p{
@@ -97,7 +101,7 @@ margin-top: 70px;
     color: #fff;
     font-size: 16px;
     width: 400px;
-    font-family: 'Roboto', sans-serif;
+
     
 
 
@@ -112,6 +116,9 @@ margin-top: 70px;
     
     
 }
+.text{
+  font-size: 22px;
+}
 .contact-info li{
     position: relative;
     color: #fff;
@@ -123,19 +130,16 @@ margin-top: 70px;
     background: #222121;
     color: #fff;
     margin-top: 500px;
+    
+    text-align: left;
    
     
 }
-.footer p{
-    margin-top: -20px;
-    position: relative;
-    text-align: right;
-    font-size: 16px;
-   
+
     
-}
+
 .footer span{ 
-    margin-left: 105px;
+    margin-left: 107px;
 }
 .footer i{
     font-size: 18px;
@@ -214,83 +218,7 @@ margin-top: 70px;
           }
           
         
-    .ribbon:after {
-        content: "";	
-        display: block;
-        width: 40px;
-        height: 0px;
-        
-        position: absolute;
-        right: 0;
-        bottom: 4px;
-        z-index: 20;
-        
-        border-bottom: 80px solid #F60018;
-        border-right: 80px solid transparent;
-        
-        -webkit-transform: rotate(90deg);
-        -webkit-transform-origin: right bottom;
-        -moz-transform: rotate(90deg);
-        -moz-transform-origin: right bottom;
-        -o-transform: rotate(90deg);
-        -o-transform-origin: right bottom;
-        -ms-transform: rotate(90deg);
-        -ms-transform-origin: right bottom;
-        transform: rotate(90deg);
-        transform-origin: right bottom;
-        }	
-        .ribbon1:after {
-          content: "";	
-          display: block;
-          width: 40px;
-          height: 0px;
-          
-          position: absolute;
-          right: 0;
-          bottom: 4px;
-          z-index: 20;
-          
-          border-bottom: 80px solid #F60018;
-          border-right: 80px solid transparent;
-          
-          -webkit-transform: rotate(90deg);
-          -webkit-transform-origin: right bottom;
-          -moz-transform: rotate(90deg);
-          -moz-transform-origin: right bottom;
-          -o-transform: rotate(90deg);
-          -o-transform-origin: right bottom;
-          -ms-transform: rotate(90deg);
-          -ms-transform-origin: right bottom;
-          transform: rotate(90deg);
-          transform-origin: right bottom;
-          }	
-        
-    .ribbon1:before {
-        content: "";	
-        display: block;
-        width: 20px;
-        height: 0px;
-        
-        position: absolute;
-        right: 0;
-        bottom: 4px;
-        z-index: 10;
-        
-        border-bottom: 80px solid rgba(0, 0, 0, 0.3 );
-        border-right: 80px solid transparent;
-        
-        -webkit-transform: rotate(80deg);
-        -webkit-transform-origin: right bottom;
-        -moz-transform: rotate(80deg);
-        -moz-transform-origin: right bottom;
-        -o-transform: rotate(80deg);
-        -o-transform-origin: right bottom;
-        -ms-transform: rotate(80deg);
-        -ms-transform-origin: right bottom;
-        transform: rotate(80deg);
-        transform-origin: right bottom;
-        }	
-        
+    
   
     .ribbon1#ff-proof:after {	
         width: 0px;
@@ -310,7 +238,7 @@ margin-top: 70px;
         }
         .tic{
           
-            padding: 165px 0 180px 0;
+            padding: 145px 0 180px 0;
             background: url(../img/black-linen.png); 
         }
 
@@ -353,10 +281,11 @@ margin-top: 70px;
             transition: .3s;
             height: 25px;
             text-align: center;
+            
         }
         .input-data input:focus{
             border:2px solid #e01533;
-            color: #e01533;
+            color: #FFB300;
         }
         .input-btn input{
             width: 100%;
@@ -432,12 +361,12 @@ margin-top: 70px;
            }
            .container {
             position: relative;
-            width: 95%;
-            min-height: 86vh;
+            width: 100%;
+            min-height: 76vh;
             padding: 2rem;
-            background-color: #fafafa;
+            background: url(../img/background-photo.jpg);       
             overflow: hidden;
-            display: flex;
+          
             align-items: center;
             justify-content: center;
             margin-bottom: -500px;
@@ -445,6 +374,7 @@ margin-top: 70px;
           
           .form {
             width: 100%;
+            margin-left: 220px;
             max-width: 820px;
             background-color: #fff;
             border-radius: 10px;
@@ -531,7 +461,7 @@ margin-top: 70px;
           
           textarea.input {
             padding: 0.8rem 1.2rem;
-            min-height: 150px;
+            min-height: 110px;
             border-radius: 22px;
             resize: none;
             overflow-y: auto;
@@ -543,7 +473,7 @@ margin-top: 70px;
             left: 15px;
             transform: translateY(-50%);
             padding: 0 0.4rem;
-            color: #fafafa;
+            color: #000;
             font-size: 0.9rem;
             font-weight: 400;
             pointer-events: none;
@@ -561,7 +491,7 @@ margin-top: 70px;
             background-color: #fff;
             border: 2px solid #fafafa;
             font-size: 0.95rem;
-            color: #F60018;
+            color: #000;
             line-height: 1;
             border-radius: 25px;
             outline: none;
@@ -696,7 +626,7 @@ margin-top: 70px;
             width: 450px;
             height: 450px;
             border-radius: 50%;
-            background: linear-gradient(to bottom, #F60018, #e01533);
+            background: linear-gradient(to bottom, #FFB300, #F60018);
             bottom: 50%;
             right: 50%;
             transform: translate(-40%, 38%);
