--- a/css/home.css
+++ b/css/home.css
@@ -22,30 +22,31 @@ body{
     
     justify-content: center;
 }
-.nav1{
-  
+.nav{
+    display: flex;
 }
 .img1{
-    margin-top: -95px;
-    justify-content: center;
-    margin-left: 50px;
+    position: relative;
+    margin-top: -26px;
+    
+    margin-left: 35px;
     
 }
 .img2{
-    margin-top: 5px;
-    width:75%;
-    height: 100%;
-        justify-content: center;
-   
-   
+  
+
+        margin-left: 24px;
+        width: 17.9%;
+        height: 9%;
+    position: fixed;
 }
-.text_p{
-    margin-top: 20px;
-    margin-left: 150px;
-    justify-content: center;
-    font-size: 20px;
-    text-align: center;
-}
+ .text_p{
+     margin-top: 20px;
+     margin-left: 150px;
+     justify-content: center;
+     font-size: 20px;
+     text-align: center;
+ }
 .nav2{
     display: grid;
     grid-column-start: 2; 
@@ -508,14 +509,6 @@ margin-top: 70px;
     
 }
 .footer p{
-    margin-top: -20px;
-    position: relative;
-    text-align: right;
-    font-size: 16px;
-   
-    
-}
-.footer span{ 
     margin-left: 105px;
 }
 .footer i{
@@ -542,18 +535,53 @@ margin-top: 70px;
     
   
 }
-#service p{
- color: #fff;
+.contact-about-us1{
+    display: grid;
+    grid-template-columns: 400px 400px 400px;
+    grid-auto-rows: 200px;
+    grid-auto-rows: minmax(300px, auto);
+    grid-column-gap: 40px;
+    grid-row-gap: 5em;
+    position: relative;
+    font-size: 18px;
+    justify-content: center;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    line-height: 30px;
     
-   
+  
 }
-#service{
-    background: linear-gradient( rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7) ), url(../img/Bookkeeping.jpg);
+.contact-about-us1 p{
+    margin-top: 90px;
+    text-align: center;
+    font-size: 25px;
+}
+
+#service1{
+    background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(../img/Business\ contracts.jpg);
     -webkit-background-size: cover;
   -moz-background-size:  cover;
   -o-background-size: cover;
   background-size: cover;
+  color: #fff;
 }
+#service2{
+    background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(../img/Employment\ Contract.jpg);
+    -webkit-background-size: cover;
+  -moz-background-size:  cover;
+  -o-background-size: cover;
+  background-size: cover;
+  color: #fff;
+}
+#service3{
+    background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(../img/Employment\ law.jpg);
+    -webkit-background-size: cover;
+  -moz-background-size:  cover;
+  -o-background-size: cover;
+  background-size: cover;
+  color:#fff;
+}
+
 .gr1{
     border: 3px solid #F60018;
     padding: 30px;
@@ -562,7 +590,12 @@ margin-top: 70px;
         -moz-transition: all 2s;
         -webkit-transition: all 1s;
         -o-transition: all 2s;
-        
+        background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(../img/Bookkeeping.jpg);
+    -webkit-background-size: cover;
+  -moz-background-size:  cover;
+  -o-background-size: cover;
+  background-size: cover;
+  color: #fff;
         
 }
 .gr1 img{
@@ -592,6 +625,12 @@ margin-top: 70px;
         -moz-transition: all 2s;
         -webkit-transition: all 1s;
         -o-transition: all 2s;
+        background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(../img/Self-Assessment.jpg);
+        -webkit-background-size: cover;
+      -moz-background-size:  cover;
+      -o-background-size: cover;
+      background-size: cover;
+      color: #fff;
         
 }
 .gr2 img{
@@ -621,6 +660,12 @@ margin-top: 70px;
         -moz-transition: all 2s;
         -webkit-transition: all 1s;
         -o-transition: all 2s;
+        background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(../img/Payroll.jpg);
+        -webkit-background-size: cover;
+      -moz-background-size:  cover;
+      -o-background-size: cover;
+      background-size: cover;
+      color: #fff;
         
 }
 .gr3 img{
@@ -650,6 +695,12 @@ margin-top: 70px;
         -moz-transition: all 2s;
         -webkit-transition: all 1s;
         -o-transition: all 2s;
+        background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(../img/Tax\ investigations.jpg);
+        -webkit-background-size: cover;
+      -moz-background-size:  cover;
+      -o-background-size: cover;
+      background-size: cover;
+      color: #fff;
         
 }
 .gr4 img{
@@ -679,6 +730,12 @@ margin-top: 70px;
         -moz-transition: all 2s;
         -webkit-transition: all 1s;
         -o-transition: all 2s;
+        background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(../img/VAT1.jpg);
+        -webkit-background-size: cover;
+      -moz-background-size:  cover;
+      -o-background-size: cover;
+      background-size: cover;
+      color: #fff;
         
 }
 .gr5 img{
@@ -709,6 +766,12 @@ margin-top: 70px;
         -moz-transition: all 2s;
         -webkit-transition: all 1s;
         -o-transition: all 2s;
+        background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(../img/Company\ accounts.jpg);
+        -webkit-background-size: cover;
+      -moz-background-size:  cover;
+      -o-background-size: cover;
+      background-size: cover;
+      color: #fff;
         
 }
 .gr6 img{
@@ -738,6 +801,12 @@ margin-top: 70px;
         -moz-transition: all 2s;
         -webkit-transition: all 1s;
         -o-transition: all 2s;
+        background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(../img/CIS.jpg);
+        -webkit-background-size: cover;
+      -moz-background-size:  cover;
+      -o-background-size: cover;
+      background-size: cover;
+      color: #fff;
         
 }
 .gr7 img{
@@ -767,6 +836,12 @@ margin-top: 70px;
         -moz-transition: all 2s;
         -webkit-transition: all 1s;
         -o-transition: all 2s;
+        background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(../img/Compliance\ with\ Companies\ House.jpg);
+        -webkit-background-size: cover;
+      -moz-background-size:  cover;
+      -o-background-size: cover;
+      background-size: cover;
+      color: #fff;
         
 }
 .gr8 img{
@@ -796,6 +871,12 @@ margin-top: 70px;
         -moz-transition: all 2s;
         -webkit-transition: all 1s;
         -o-transition: all 2s;
+        background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(../img/Reference\ letters.jpg);
+        -webkit-background-size: cover;
+      -moz-background-size:  cover;
+      -o-background-size: cover;
+      background-size: cover;
+      color: #fff;
         
 }
 .gr9 img{
@@ -851,7 +932,7 @@ margin-top: 70px;
         grid-column-end: 1;
         grid-row-start: 2;
         grid-row-end: 3;
-        background: linear-gradient( rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7) ), url(../img/Bookkeeping.jpg);
+        background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(../img/Legal\ assistance.jpg);
     -webkit-background-size: cover;
   -moz-background-size:  cover;
   -o-background-size: cover;
@@ -865,7 +946,7 @@ margin-top: 70px;
    grid-column-end: 3;
    grid-row-start: 2;
    grid-row-end: 3;
-   background: linear-gradient( rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7) ), url(../img/Bookkeeping.jpg);
+   background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(../img/Legal\ translation.jpg);
    -webkit-background-size: cover;
  -moz-background-size:  cover;
  -o-background-size: cover;
@@ -947,13 +1028,13 @@ width: 95px;
  
 border-radius: 50%;
   }
-  
-#lc{
-    text-decoration: none;
-    color: #000;
-}
-#lc:hover{
-color: #FFB300;
+  #lc{
+      text-decoration: none;
+  }
+  .services span{
+    font-family: 'Montez', cursive;
+    color: #FFB300;
+    font-size: 70px;
 }
 .heading{
     font-weight: bold;
