--- a/css/menu.css
+++ b/css/menu.css
@@ -126,12 +126,8 @@ background:transparent;
   color: #FFB300;
   margin-left: -15px;
 }
-@media screen and (max-width:1500px){
-  .img2{
-    margin-left: 40px;
-  width: 18.5%;
-  height: 7.3%;
-      }
+@media screen and (max-width:1550px){
+ 
     .nav3{
       width: 100%;
       margin-left: 40px;
@@ -152,6 +148,7 @@ background:transparent;
       }
       .form{
         margin-left: 280px;
+        margin-top: 70px;
       }
       .footer span{
         margin-left: 100px;
@@ -159,12 +156,18 @@ background:transparent;
       #men{
         margin-left: 340px;
       }
+      .img2{
+        margin-left: 40px;
+      width: 15%;
+      height: 7.4%;
+          }
      
 }
 @media screen and (max-width:1400px){}
 .img1{
   left: -5px;
 }
+
 .img2{
 margin-left: 30px;
 width: 16%;
