--- a/css/Legal Consalting.css
+++ b/css/Legal Consalting.css
@@ -26,7 +26,7 @@ body{
   }
   .img1{
     position: relative;
-    margin-top: -26px;
+    margin-top: -2px;
     
     margin-left: 35px;
     
@@ -34,13 +34,14 @@ body{
   .img2{
   
   
-        margin-left: 24px;
-        width: 17.9%;
-        height: 9%;
-    position: fixed;
+    margin-top: 27px;
+    margin-left: 24px;
+    width: 47.9%;
+    height: 19%;
+position: fixed;
   }
   .text_p{
-     margin-top: 20px;
+     margin-top: 10px;
      margin-left: 150px;
      justify-content: center;
      font-size: 20px;
@@ -52,7 +53,8 @@ body{
      grid-column-end: 3; 
      grid-row-start: 2; 
      grid-row-end: 3;
-     margin-top: -30px;
+     margin-top: -28px;
+    
      position: relative;
      font-size: 19.6px;
      
@@ -277,6 +279,9 @@ margin-top: 70px;
    
     
 }
+.leg_cert{
+  margin-top: -300px;
+}
 .footer span{ 
     margin-left: 107px;
     text-align: left;
@@ -289,7 +294,9 @@ margin-top: 70px;
 .footer i:hover{
     color:#FFB300;
 }
-
+.men{
+  margin-left: 300px;
+}
  @media screen and (max-width:1500px){
 
 
@@ -788,7 +795,7 @@ margin-top: 70px;
     #wrapper { width:auto; margin: auto;  }
 
 
-#content { }
+
 #content .info { padding:10px; }
 
 
@@ -826,6 +833,7 @@ margin-top: 70px;
     
     
       text-align:center;
+      margin-top: 90px;
        padding-bottom:15px; }
 .movieinfo p { padding-bottom:15px; text-align: center;}
 .movieinfo a { background-color:#F60018; padding:5px 10px;
@@ -966,3 +974,8 @@ margin-top: 70px;
           margin-left: -15px;
         }
        
+        .services span{
+          font-family: 'Montez', cursive;
+          color: #FFB300;
+          font-size: 70px;
+      }
