--- a/css/home.css
+++ b/css/home.css
@@ -2,93 +2,97 @@ body{
     height: 100vh;
     margin: 0;
     padding: 0;
-    background-color: #fff !important;
+   
 }
 .fix{
+ 
     top: -10px;
     position: fixed;
     z-index: 1000;
     background-color: #fff;
 }
 .navigation{
-   padding-top: 10px;
-    display: grid;
-    grid-template-columns: 400px 1050px 260px;
-    grid-auto-rows: 100px;
-    grid-auto-rows: minmax(50px, auto);
-    grid-column-gap: 40px;
-    margin-bottom: -35px;
-    position: relative;
-    
-    justify-content: center;
+  padding-top: 10px;
+   display: grid;
+   grid-template-columns: 400px 1150px 260px;
+   grid-auto-rows: 100px;
+   grid-auto-rows: minmax(50px, auto);
+   grid-column-gap: 40px;
+   margin-bottom: -35px;
+   position: relative;
+   
+   justify-content: center;
 }
 .nav{
-    display: flex;
+  display: flex;
 }
 .img1{
-    position: relative;
-    margin-top: -26px;
-    
-    margin-left: 35px;
-    
+  position: relative;
+  margin-top: -12px;
+  
+  margin-left: 35px;
+  
 }
 .img2{
-  
 
-        margin-left: 24px;
-        width: 17.9%;
-        height: 9%;
+margin-top: 17px;
+      margin-left: 24px;
+      width: 14.4%;
+      height: 9.4%;
     position: fixed;
 }
- .text_p{
-     margin-top: 20px;
-     margin-left: 150px;
-     justify-content: center;
-     font-size: 20px;
-     text-align: center;
- }
+.text_p{
+   margin-top: 20px;
+   margin-left: 150px;
+   justify-content: center;
+   font-size: 20px;
+   text-align: center;
+}
 .nav2{
-    display: grid;
-    grid-column-start: 2; 
-    grid-column-end: 3; 
-    grid-row-start: 2; 
-    grid-row-end: 3;
-    margin-top: -30px;
-    position: relative;
-    font-size: 19.6px;
-    
+   display: grid;
+   grid-column-start: 2; 
+   grid-column-end: 3; 
+   grid-row-start: 2; 
+   grid-row-end: 3;
+   margin-top: -25px;
+   position: relative;
+   font-size: 19.6px;
+   margin-left: -38px;
+   
 }
 .nav2 a{
-    text-decoration: none;
-    color: #000;
-   margin-left: 80px;
- margin-top: -10px;
-   font-weight: bold;
-   background-image: linear-gradient(#F60018, #F60018);
-   background-position: 0% 100%;
-   background-repeat: no-repeat;
-   background-size: 0% 2px;
-   transition: background-size .3s;
+   text-decoration: none;
+   color: #000;
+  margin-left: 80px;
+
+margin-top: -10px;
+  font-weight: bold;
+  background-image: linear-gradient(#F60018, #F60018);
+  background-position: 0% 100%;
+  background-repeat: no-repeat;
+  background-size: 0% 2px;
+  transition: background-size .3s;
 }
 .nav2 a:hover{
-    
-    background-size: 100% 2px;
-    
+   
+   background-size: 100% 2px;
+   
 }
 .nav3{
 
-    background: #F60018;
-    width: 100%;
-    text-align: center;
-    justify-content: center;
-    height: 60px;
-    
+   background: #F60018;
+   margin-left: -38px;
+   text-align: center;
+   justify-content: center;
+   height: 60px;
+   
+   
 }
 .nav3 p{
-    margin-top: 20px;
-    margin-right:150px;
-    color: #fff;
-    
+   margin-top: 20px;
+   margin-right:280px;
+   color: #fff;
+   
 }
 .card{
     display:  grid;
@@ -122,7 +126,7 @@ body{
 justify-content: center;
 align-items: center;
 text-align: center;
-margin-top: 70px;
+margin-top: 68px;
 font-size: 22px;
 }
 .card1 i{
@@ -204,15 +208,16 @@ font-size: 22px;
 }
 .fon{
     background:url(../img/photo1.jpg);
+    width: 100%;
    
-    height: 100px;
+   
     font-size: 44px;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
+
     padding: 20px;
     
 }
+.fon p{text-align: left;
+margin-left: 200px;}
 .fon cite{
     color:#F60018;
 }
@@ -237,6 +242,7 @@ transition-property: background, border-radius;
 transition-duration: .2s, 1s;
 transition-timing-function: linear, ease-in;
 width: 95px;
+margin-top: -190px;
   }
   
   .fon a:hover{
@@ -245,17 +251,50 @@ width: 95px;
  
 border-radius: 50%;
   }
+  .services1{
+      
+    padding-top: 90px;
+    
+    padding-bottom: 100px;
+    text-align: center;
+  }
+  .services1 h5{
+    margin-top: -130px;
+    font-weight: bold;
+    position: relative;
+    text-align: center;
+    justify-content: center;
+    
+}
+.services1 h1{
+    position: relative;
+     text-align: center;
+     padding-bottom: 30px;
+   
+
+}
+.services1 cite{
+    color:#F60018;
+   
+    
+    background-image: linear-gradient(currentColor, currentColor);
+    background-position: 0% 100%;
+    background-repeat: no-repeat;
+    background-size: 0% 2px;
+    transition: background-size .3s;
+}
 
 .services{
    
-height: auto;
+
     padding-top: 130px;
-    overflow: hidden;
+    
     padding-bottom: 100px;
     text-align: center;
     
     
 }
+
 .services h5{
     margin-top: -130px;
     font-weight: bold;
@@ -322,7 +361,7 @@ background-size: 100% 2px;
         }
         button.learn-more {
           width: 14rem;
-          height: auto;
+         
         }
         button.learn-more .circle {
           transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
@@ -460,13 +499,13 @@ font-family: 'Roboto', sans-serif;
     margin-top: -40px;
 }
 .programs{
-    background: #fff;
-    height: auto;
+    
+ 
     padding: 38px;
 }
 .top_footer{
     background: #000;
-    height: auto;
+  
     padding-bottom: 70px;
     position: relative;
     text-align: left;
@@ -1045,7 +1084,7 @@ border-radius: 50%;
     transition: .4s;
 }
 .map{
-    width:500px; 
+    width:500px;
     height:350px;
    text-align: center;
    justify-content: center;
