--- a/css/menu.css
+++ b/css/menu.css
@@ -1,4 +1,8 @@
-
+.body{
+  -webkit-animation: normal;
+  -o-animation: normal;
+  -ms-zoom-animation: none;
+}
 
 .nav-menu{
 width: 20%;
@@ -127,6 +131,7 @@ background:transparent;
   margin-left: -15px;
 }
 @media screen and (max-width:1550px){
+
  
     .nav3{
       width: 100%;
@@ -341,7 +346,7 @@ width: 0.1%;
   .form{
     margin-left: -2px;
   }
-  .ribbon1{height: 40px;right: 100px; width: 50%;
+  .ribbon1{height: 40px;right: 100px; width: 60%;
   }
  .footer{
    font-size: 12px;
