--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-}щ
+}
 
 body {
  
@@ -68,6 +68,7 @@ body {
       -ms-flex-direction: column;
           flex-direction: column;
   height: 100%;
+  width: 100%;
   text-transform: uppercase;
   line-height: 1;
 }
