--- a/css/menu3.css
+++ b/css/menu3.css
@@ -124,17 +124,23 @@
       color: #FFB300;
       margin-left: -15px;
     }
-    @media screen and (max-width:1500px){
+    @media screen and (max-width:1960px){ #movieposters{margin-left: 200px;}}
+    @media screen and (max-width:1650px){
       .img2{
         margin-left: 37px !important;
-      width: 14.5% !important;
-      height: 8.3% !important;
+      width: 44.5% !important;
+      height: 23.3% !important;
           }
+          #movieposters{margin-left: 100px;}
          #service-text{
              font-size: 24px;
              text-align: center;
              width: 83.5%;
              margin-left: 110px;
+         }
+         .lc{
+           margin-left: -28px;
+           padding-bottom: 20px;
          }
         .nav3{
           width: 100%;
@@ -168,14 +174,19 @@
               margin-left: 700px;
           }
     }
-    @media screen and (max-width:1400px){}
+    @media screen and (max-width:1460px){}
     .img1{
       left: -5px;
     }
+    .lc{
+      padding-bottom: 20px;
+      margin-left: -10px;
+    }
+   #movieposters{margin-left: 20px;}
     .img2{
-    margin-left: 30px !important;
-    width: 16% !important;
-    height: 9% !important; 
+    margin-left: 15px !important;
+    width: 56% !important;
+    height: 39% !important; 
     }
     .text_p{
       max-width: 100%;
@@ -197,6 +208,7 @@
         }
       .nav2{
         max-width: 90%;
+        margin-top: -22px;
     left:-95px;
     left: calc(50% - 620px);
     
@@ -209,6 +221,10 @@
       }
       .img1{
         left: -20px;
+      }
+      .lc{
+        padding-bottom: 20px;
+        margin-left: -80px;
       }
       .img2{
     margin-left: -5px;
@@ -239,15 +255,20 @@
           margin-left: 280px;
       }
     }
-    @media screen and (max-width: 1200px){
+    @media screen and (max-width: 1280px){
       .img1{
         left: -30px;
         width: 20%;
+        margin-top: 10px;
+      }
+      .lc{
+        padding-bottom: 20px;
+        
       }
       .img2{
     margin-left: -19px !important;
-    width: 17.4% !important;
-    height: 9.2% !important;
+    width: 47.4% !important;
+    height: 42.2% !important;
       }
       .text_p{
         max-width: 65%;
@@ -320,13 +341,17 @@
    margin-left: 30px;
       }
     }
-      @media screen and (max-width: 1000px){
+      @media screen and (max-width: 1136px){
          
           .navigation{
     
     margin-top: -300px;
     font-size: 0.1px;
     width: 0.1%;
+          }
+          .lc{
+            padding-bottom: 20px;
+            margin-left: -80px;
           }
          .form{
            margin-left: 20px;
@@ -344,7 +369,7 @@
          
     
       }
-    @media screen and (max-width: 768px){
+    @media screen and (max-width: 820px){
       .ribbon1{
         width: 45%;
         margin-left: 75px;
@@ -354,6 +379,8 @@
           margin-left: -80px;
           width: 110%;
       }
+      .lc{
+      margin-left: -10px;}
       .reference{
           margin-top: 215px;
           margin-left: 370px;
@@ -412,12 +439,13 @@
      }
      
     }
-    @media screen and (max-width: 500px) {
+    @media screen and (max-width: 640px) {
         
       .reference{
         margin-top: 2100px; margin-left: -20px;
         
       }
+      .lc span{margin-left: -1px; font-size: 55px; width: 120%;}
       .ribbon{height: 40px; margin-top: 30px; }
       .tic{ width: 102.5%;}
       .tic p{
@@ -486,7 +514,7 @@
       .self{margin-left: -20px;}
       .movie{ padding-top: 420px;}
     }
-    @media screen and (max-width: 380px) {
+    @media screen and (max-width: 420px) {
         #movieposters{
             display: grid;
            
@@ -497,6 +525,7 @@
             grid-row-gap: 35em; 
        margin-left: -90px;
           }
+          .lc span{margin-left: -45px; font-size: 45px; width: 130%;}
           .bookkeeping{
             margin-left: 30px;
           }
@@ -518,7 +547,7 @@
           .footer{width: 140%;}
 
     }
-    @media screen and (max-width: 330px) {
+    @media screen and (max-width: 360px) {
         #movieposters{
             display: grid;
           
@@ -529,7 +558,7 @@
             grid-row-gap: 25em; 
        margin-left: -80px;
           }
-          
+          .lc span{margin-left: -125px; font-size: 45px; width: 140%;}
           .reference{
             margin-top: 1120px;
            
