--- a/css/menu_home.css
+++ b/css/menu_home.css
@@ -126,10 +126,21 @@
     }
     @media screen and (max-width:2560px){ .img2{
       margin-left: 40px;
-    width: 14.5% !important;
-    height: 8% !important;
+    width: 14.3% !important;
+    height: 7% !important;
         }}
-    @media screen and (max-width:1500px){
+        @media screen and (max-width: 2000px){
+          .nav3 {margin-left: 10px !important; width: 100%;}
+          .nav3 p{
+            margin-left: 60px !important;
+          }
+          .nav2{margin-left: 70px;}
+          .slider{margin-top:120px;}
+          .img2{height: 6% !important;}
+          .fon p{margin-left: 550px;}
+        }
+        @media screen and (max-width: 1800px){ .img2{height: 6% !important;}}
+    @media screen and (max-width:1600px){
      
          #service-text{
              font-size: 24px;
@@ -137,18 +148,23 @@
              width: 83.5%;
              margin-left: 110px;
          }
+         .img2{height: 85% !important;
+          margin-top: 5px;
+        width: 15% !important;}
         .nav3{
           width: 100%;
           margin-left: 40px;
         }
         .nav2{
-          margin-left: 60px;
+          margin-left: 80px;
         }
-     
+     .nav3{ width: 110%;}
+     .img2{height: 8% !important;}
         .nav3 p{
-          margin-right: 110px;
+         
+          margin-right: 250px;
         }
-        .fon p{margin-left: 450px;}
+        .fon p{margin-left: 550px;}
       .fon a{ margin-left: 100px;}
           .form{
             margin-left: 280px;
@@ -198,6 +214,8 @@
       .nav{
         grid-template-columns: 1fr;
       }
+      .programs{ margin-left: -23px;}
+      .prog1{width: 35%;}
       .img1{
         left: -20px;
       }
@@ -217,12 +235,12 @@
         .nav2{
           max-width: 90%;
     left:-85px;
-    left: calc(50% - 600px);
+    left: calc(50% - 645px);
     
           }
           .nav3 {
             max-width: 95%;
-            margin-left:-63px;
+            margin-left:-33px;
             left: calc(50% - 520px);
             }
 
@@ -236,6 +254,10 @@
         width: 16.3% !important;
         height: 9.3% !important;
           }
+          .nav3 {
+            margin-left: -40px !important;
+          }
+          .nav3 p{margin-left: 20px !important;}
           .fon p{margin-left: 350px;}
           .fon a{ margin-left: -50px;}
     }
@@ -333,9 +355,9 @@
     }
  
       .img2{
-    margin-left: -7px;
-    width: 16.4% !important;
-    height: 9.9% !important;
+    margin-left: -12px;
+    width: 16% !important;
+    height: 9% !important;
       }
       .bottom_info{
         display: grid;
@@ -361,19 +383,20 @@
       
           font-size:15.5px;
           
-                left: calc(50% - 755px);
+                left: calc(50% - 820px);
           
           }
           .nav2 a{
             margin-left: 73px;
           }
           .nav3 {
-            max-width: 85%;
+            max-width: 95%;
             font-size:14px;
-            margin-left:-140px;
+            margin-left:-170px !important;
             left: calc(50% - 706px);
             margin-bottom: 45px;
           }
+          .nav3 p{margin-left: -200px !important;}
           .tic h1{
             font-size: 28px;
           }
@@ -389,6 +412,24 @@
     
     
       
+    }
+    @media screen and (max-width: 1150px){
+.img2{
+  height: 7.5% !important;
+}
+.nav3 p{
+  margin-left: -20px;
+}
+.nav2{margin-left: 65px;}
+.prog1{width: 30%;}
+.prog2{width: 13%;}
+.prog3{width: 15%;}
+    }
+    @media screen and (max-width: 1080px){
+      .img2 {
+        margin-top: 30px;
+        height: 8% !important;
+      }
     }
       @media screen and (max-width: 1000px){
         .services1 span{
@@ -586,13 +627,203 @@
      }
      
     }
-    @media screen and (max-width: 500px) {
+    @media screen and (max-width: 640px) { .prog1{width: 150%;
+      margin-left: -50px;}
+      .fon{
+        margin-top: -100px;
+        width: 119.3%;
+      }
+     
+      .fon a{ font-size: 12px; margin-left: 210px;}
+      .slider{
+        width: 109%;
+      }
+      .footer{width: 138.9%;}
+      .top_footer{width: 100%;}
+      .programs{
+        margin-left: 190px;
+      }
+    .card{
+      display:  grid;
+      grid-template-columns: 350px ;
+      
+      grid-auto-rows: minmax(250px, auto);
+  margin-left: 30px;
+    font-size:18px ;
+      position: relative;
+     
+      justify-content: center;
+      margin-top: -80px;
+    }
+    .card p{
+      margin-top: 10px;
+      margin-left: 55px;
+      font-size: 20px;
+      
+    }
+    .card a{
+      margin-left: -10px;
+      font-size: 24px;
+      
+    }
+    
+    .bottom_info{
+      display: grid;
+      grid-template-columns: 200px;
+      grid-auto-rows: 50px;
+        grid-column-gap: 100px;
+     margin-bottom: 100px;
+      position: relative;
+      justify-content: center;
+      text-align: center;
+      padding-top: 50px;
+      margin-left: 30px;
+     
+      
+  }
+  .services h1{
+ 
+    text-align: center;
+    margin-left: 185px;
+    font-size: 20px;
+  }
+  .services h5{
+    margin-left: 190px;
+  }
+    .slider__slide-subheading{
+      font-size: 12px;
+      margin-left: 20px;
+      text-align: center;
+    }
+   
+   .footer{
+     font-size: 12px;
+     margin-left: -90px;
+   }
+ 
+    .map{
+        margin-left: 40px;
+        width: 80%;
+        margin-top: 12px;
+    }
+   .contact-about-us1{
+     margin-left: 180px;
+   }
+   .services1{
+     margin-left: -110px;
+     margin-top: -240px;
+   }
+.acserv span{
+ margin-left: -45px;
+ font-size: 42px;
+ text-align: center;
+}
+    #container1{
+
+line-height: 450px;
+
+grid-column-start: 2;
+grid-column-end: 3;
+grid-row-start: 5;
+grid-row-end: 5;
+margin-left: 10px;
+-webkit-background-size: cover;
+-moz-background-size:  cover;
+-o-background-size: cover;
+background-size: cover;
+    }
+    #gr5{
+      grid-column-start: 2;
+      grid-column-end: 3;
+      grid-row-start: 5;
+      grid-row-end: 5;
+   height: 300px;
+  -webkit-background-size: cover;
+  -moz-background-size:  cover;
+  -o-background-size: cover;
+  background-size: cover;
+    }
+   
+#service1{
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 1;
+  grid-row-end: 1;
+  
+-webkit-background-size: cover;
+-moz-background-size:  cover;
+-o-background-size: cover;
+background-size: cover;
+}
+#service2{
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 2;
+  grid-row-end: 2;
+  
+-webkit-background-size: cover;
+-moz-background-size:  cover;
+-o-background-size: cover;
+background-size: cover;
+}
+#service3{
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 3;
+  grid-row-end: 3;
+  
+-webkit-background-size: cover;
+-moz-background-size:  cover;
+-o-background-size: cover;
+background-size: cover;
+}
+#gr4{
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 4;
+  grid-row-end: 4;
+  
+-webkit-background-size: cover;
+-moz-background-size:  cover;
+-o-background-size: cover;
+background-size: cover;
+}
+.contact-about-us1 p{
+ font-size: 16px;
+}
+
+    .contact-about-us{
+      display: grid;
+      grid-template-columns: 300px ;
+      grid-auto-rows: 200px;
+      grid-auto-rows: minmax(300px, auto);
+      grid-column-gap: 20px;
+      grid-row-gap: 5em;
+      position: relative;
+      font-size: 18px;
+      justify-content: center;
+      padding-top: 50px;
+      padding-bottom: 50px;
+      line-height: 30px;
+      margin-left: 300px;
+      
+    
+    }
+    .contact-about-us img{
+      margin-left: 80px;
+    }
+  .contact-about-us p{
+    font-size: 16px;
+  }
+  #container{margin-top: 10px; margin-left: 270px;}}
+    @media screen and (max-width: 540px) {
         .prog1{width: 150%;
         margin-left: -50px;}
         .fon{
           margin-top: -100px;
           width: 119.3%;
         }
+       
         .fon a{ font-size: 12px; margin-left: 210px;}
         .slider{
           width: 109%;
@@ -617,10 +848,15 @@
       .card p{
         margin-top: 10px;
         margin-left: 55px;
+        font-size: 20px;
+        
       }
       .card a{
         margin-left: -10px;
+        font-size: 24px;
+        
       }
+      
       .bottom_info{
         display: grid;
         grid-template-columns: 200px;
@@ -772,7 +1008,7 @@ background-size: cover;
     #container{margin-top: 10px; margin-left: 270px;}
     }
   
-    @media screen and (max-width: 380px) {
+    @media screen and (max-width: 400px) {
       .prog1{width: 210%;
         margin-left: -70px;}
         .prog3{
